--- a/flower-shop-assignment/index.html
+++ b/flower-shop-assignment/index.html
@@ -81,8 +81,69 @@
    </div>
 
   </section>
+  
+    
 
 
+
+
+
+
+
+   <!--this is flower pot section-->
+   <section class="products" id="products">
+    <h1 class="heading">latest<span>products</span></h1>
+    <div class="box-container">
+      <div class="box"></div>
+     <span class="discount">-10%</span>
+     <div class="image">
+      <img src="./Flower asset/pngwing 10.png" alt="">
+     <div class="icons">
+      <a href="#" class="fas fa-heart"></a>
+      <a href="#" class="cart-button">add to cart</a>
+      <a href="#" class="fas fa-share"></a>
+     </div>
+    </div>
+   <div class="content">
+    <h3>flower pot</h3>
+    <div class="price">$12.99<span>$15.99</span></div>
+   </div>
+
+   <div class="box">
+    <span class="discount">-12%</span>
+    <div class="image">
+     <img src="./Flower asset/pngwing 6.png" alt="">
+    <div class="icons">
+     <a href="#" class="fas fa-heart"></a>
+     <a href="#" class="cart-button">add to cart</a>
+     <a href="#" class="fas fa-share"></a>
+    </div>
+    </div>
+     <div class="content">
+    <h3>flower pot</h3>
+    <div class="price">$7.99<span>$15.99</span></div>
+   </div>
+   <div class="pot">
+    <span class="discount">-10%</span>
+    <div class="image">
+     <img src="./Flower asset/pngwing 5.png" alt="">
+    <div class="icons">
+     <a href="#" class="fas fa-heart"></a>
+     <a href="#" class="cart-button">add to cart</a>
+     <a href="#" class="fas fa-share"></a>
+    </div>
+    </div>
+    <div class="content">
+    <h3>flower pot</h3>
+    <div class="price">$11.99<span>$15.99</span></div>
+   </div>
+    </div>
+   </div>
+
+
+
+
+  </section>
     </main>
     <footer></footer>
 </body>
