--- a/flower-shop-assignment/index.html
+++ b/flower-shop-assignment/index.html
@@ -24,4 +24,10 @@
         </div>
         </header>
         <main>
-<!--this is featured section-->
+          <section class="featured">
+
+            <h3 class="section-title">Our Featured Flowers</h3>
+            <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+          </section>
+          </main>
+
