--- a/flower-shop-assignment/index.html
+++ b/flower-shop-assignment/index.html
@@ -28,6 +28,25 @@
 
             <h3 class="section-title">Our Featured Flowers</h3>
             <p class="section-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <div class="flower-tree">
+              
+        <!-- flower*3>img+h3.section-title -->
+        <div class="flower">
+          <img src="Flower asset/pngwing 6.png" alt="">
+          <h3 class="flower-title">Pink Flower Tree</h3>
+        </div>
+        <div class="flower">
+          <img src="Flower asset/pngwing 8.png" alt="">
+          <h3 class="flower-title">Pink Flower Tree</h3>
+        </div>
+        <div class="flower">
+          <img  src="Flower asset/pngwing 7.png" alt="">
+          <h3 class="flower-title">Pink Flower Tree</h3>
+        </div>
+
+            </div>
           </section>
+
+         
           </main>
 
