--- a/flower-shop-assignment/index.html
+++ b/flower-shop-assignment/index.html
@@ -101,14 +101,13 @@
             <button class="btn-primary">Subscribe</button>
           </form>
           </div>
-
-
-
-
-
-
-
-
          </section>
         </main>
+        <footer>
+          <div class="footer-item">
+            <h3 class="footer-title"> <span class="text-primary">Flower</span><span class="footer-text">Shop</span></h3>
+            <p class="footer-para">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="footer-description">@2020-2023, FlowerShop.com. All rights reserved</p>
+          </div>
+        </footer>
 
