--- a/flower-shop-assignment/index.html
+++ b/flower-shop-assignment/index.html
@@ -31,15 +31,15 @@
             <div class="flower-tree">
               
         <!-- flower*3>img+h3.section-title -->
-        <div class="flower">
+        <div class="flower1">
           <img src="Flower asset/pngwing 6.png" alt="">
           <h3 class="flower-title">Pink Flower Tree</h3>
         </div>
-        <div class="flower">
+        <div class="flower2">
           <img src="Flower asset/pngwing 8.png" alt="">
           <h3 class="flower-title">Pink Flower Tree</h3>
         </div>
-        <div class="flower">
+        <div class="flower3">
           <img  src="Flower asset/pngwing 7.png" alt="">
           <h3 class="flower-title">Pink Flower Tree</h3>
         </div>
@@ -72,7 +72,9 @@
          <div class="sign-up">
          <button class="btn-primary">Sign Up</button>
          </div>
-         <img class="img" src="Flower asset/pngwing 8.png" alt="">
+         <div class="discount_img">
+          <img class="img" src="Flower asset/pngwing 8.png" alt="">
+         </div>
           </div>
           </section>
 
